<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scrollViewtv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:context=".TVShow.TVShowDetailActivity">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/gambar_detilTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvjuduldetilTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/judultvdetil"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/gambar_detilTV"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tv_rilis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rilisdetil"
                android:textAlignment="center"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tvjuduldetilTV"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tv_rilisTV_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="mm-dd-yyyy"
                android:textAlignment="center"
                android:textColor="#000"
                app:layout_constraintTop_toBottomOf="@+id/tv_rilis"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/popularitasdetil"
                android:textAlignment="center"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_rilisTV_detail"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/tv_ratingTV_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/popularitytv"
                android:textAlignment="center"
                android:textColor="#000"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/sinopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/sinopsisdetil"
                android:textAlignment="center"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/tv_ratingTV_detail"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:id="@+id/sinopsis_detailTV"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:hint="@string/loremipsum"
                android:textColor="#000"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textStyle="normal"
                app:layout_constraintTop_toBottomOf="@+id/sinopsis"
                tools:layout_editor_absoluteX="0dp" />

            <ProgressBar
                android:id="@+id/progressDetailtv"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="192dp"
                android:layout_marginBottom="212dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

